fix: update CORS to allow all Vercel preview URLs